--- a/DeviceConnector/DeviceConnector.csproj
+++ b/DeviceConnector/DeviceConnector.csproj
@@ -1,9 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>24110119-1b4f-43d9-a154-f751ac3ce10f</UserSecretsId>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
