Adds employee deletion and improves fingerprint upload
Implements the ability to delete employee data via gRPC.
This includes adding a new gRPC method and updating the SDK
to handle the deletion logic, including robust error handling.

Improves batch fingerprint upload to provide more detailed
success/failure reporting and avoid potential issues. It adds
the ability to enable and disable the device around fingerprint
operations to ensure correct operation. It also fixes connection
and repository handling.

--- a/SDKHelper/SDKHelper.csproj
+++ b/SDKHelper/SDKHelper.csproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <Compile Include="Helper\SDKHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ChamCongRepository.cs" />
     <Compile Include="Repository\NhanVienRepository.cs" />
   </ItemGroup>
   <ItemGroup>
