--- a/DeviceConnector/Properties/launchSettings.json
+++ b/DeviceConnector/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7082;http://localhost:5283",
+      "applicationUrl": "https://0.0.0.0:7082;http://0.0.0.0:5283",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
