--- a/DeviceConnector/DeviceConnector.csproj
+++ b/DeviceConnector/DeviceConnector.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>24110119-1b4f-43d9-a154-f751ac3ce10f</UserSecretsId>
     <PlatformTarget>x86</PlatformTarget>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
