--- a/DeviceConnector/Properties/launchSettings.json
+++ b/DeviceConnector/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5283",
+      "applicationUrl": "http://0.0.0.0:5283",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
